fix overflowing long repo names in the left list

--- a/assets/stylesheets/left/list.sass
+++ b/assets/stylesheets/left/list.sass
@@ -25,6 +25,13 @@
     &.red a
       color: #c00
 
+    .current
+      display: inline-block
+      max-width: 280px
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
+
     .last_build
       float: right
 
